[tool.poetry]
name = "labosphere"
version = "1.0.0"
description = "A Cubari repo generator for TCB Scans' One Piece releases"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"
packages = [{ include = "labosphere" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
yarl = "^1.9.2"
path = "^16.7.1"
typer = { extras = ["all"], version = "^0.9.0" }
decorator = "^5.1.1"
dict-deep = "^4.1.2"
fake-useragent = "^1.1.3"

[tool.poetry.scripts]
labosphere = "labosphere.cli:app"
lbs = "labosphere.cli:app"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
