[project]
name = "labosphere"
version = "0.1.0"
description = "A Cubari repo generator for One Piece"
readme = "README.md"
authors = [
    { name = "celsius narhwal", email = "hello@celsiusnarhwal.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "decorator>=5.1.1",
    "dict-deep>=4.1.2",
    "fake-useragent>=2.0.3",
    "path>=17.0.0",
    "pendulum>=3.0.0",
    "requests>=2.32.3",
    "tomlkit>=0.13.2",
    "typer>=0.15.1",
    "yarl>=1.18.3",
]

[project.scripts]
labosphere = "labosphere.cli:app"
lbs = "labosphere.cli:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
